# AndroidTest

./: .gitignore  .gitmodules  Users:albert:Documents:mkdo.textClipping  build.gradle  build.gradle.kts  gradle.properties  module_basic.gradle  settings.gradle  settings.gradle.kts
.run/: JNI Test.run.xml
TestRxJava/: build.gradle
VersionPlugin/: build.gradle.kts  settings.gradle.kts
aidl/: build.gradle
android_lib/: android_lib_basic.gradle
android_lib/androidRust/: build.gradle  build.gradle.kts
android_lib/androidRust/src/main/test_rust/: Cargo.toml  config
android_lib/androidRust/src/main/test_rust/src/: lib.rs
android_lib/ffmpeg/: build.gradle  build.gradle.kts
android_lib/ffmpeg/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_lib/ffmpeg/src/main/cpp/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
android_lib/ffmpeg/src/main/cpp/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
android_lib/ffmpeg/src/main/cpp/include/libavutil/: ffversion.h
android_lib/ffmpeg/src/main/cpp/src/: shadar_triangle.cpp
android_lib/lib_share/: build.gradle  build.gradle.kts
android_lib/media_tool/: build.gradle  build.gradle.kts
android_lib/my_butter_knife/: build.gradle  build.gradle.kts
android_lib/socket_io_signaling/: build.gradle  build.gradle.kts
android_lib/test_jni/: build.gradle
android_lib/theme/: build.gradle  build.gradle.kts
android_lib/webrtc/: build.gradle
app/: app_basic.gradle  build.gradle
app/app/: build.gradle  build.gradle.kts
app/app/src/main/cpp/: A.cpp  A.h  CMakeLists.txt  test_jni.cpp
app/arm/: build.gradle  build.gradle.kts
app/camera/: build.gradle.kts
app/custom_view/: build.gradle.kts
app/dagger2/: build.gradle  proguard-rules.pro
app/lifecycle/: build.gradle  build.gradle.kts
app/media/: build.gradle  build.gradle.kts
app/media_player/: build.gradle  build.gradle.kts
app/opengles3/: build.gradle  build.gradle.kts
app/opengles3_native/: build.gradle  build.gradle.kts
app/provider/: build.gradle  build.gradle.kts
app/recycler/: build.gradle  build.gradle.kts
app/rtc_demo/: build.gradle  build.gradle.kts
app/rtc_demo_native/: build.gradle  proguard-rules.pro
app/rtc_demo_native/src/main/cpp/: CMakeLists.txt
app/rtc_demo_native/src/main/cpp/base/: ImageUtil.h  env.cpp  env.h  esUtil.cpp  esUtil.h
app/rtc_demo_native/src/main/cpp/camera/: camera_engine.cpp  camera_engine.h  camera_manager.cpp  camera_manager.h  image_reader.cpp  image_reader.h
app/rtc_demo_native/src/main/cpp/capture/: Camera.cpp  Camera.h  Capture.cpp  Capture.h  VideoCapture.cpp  VideoCapture.h
app/rtc_demo_native/src/main/cpp/main/: android_main.cpp  camera_listeners.cpp  camera_ui.cpp  main_activity.cpp  regist_class.cpp
app/rtc_demo_native/src/main/cpp/peer/: android_video_frame_buffer.cpp  android_video_frame_buffer.h  android_video_sink.cpp  android_video_sink.h  android_video_track_source.cpp  android_video_track_source.h  my_rtc_engine.cpp  my_rtc_engine.h  vcm_capturer.cpp  vcm_capturer.h
app/rtc_demo_native/src/main/cpp/permissition/: Permission.cpp  Permission.h
app/rtc_demo_native/src/main/cpp/signaling/: signaling_client.cpp  signaling_client.h  socket_callback_interface.cpp  socket_callback_interface.h
app/rtc_demo_native/src/main/cpp/src/: my_rtc_engine.cpp
app/rtc_demo_native/src/main/cpp/src/base/: main_activity.cpp
app/rtc_demo_native/src/main/cpp/testthread/: test_thread.cpp  test_thread.h
app/rtc_demo_native/src/main/cpp/utils/: attach_thread_scoped.cpp  camera_utils.cpp  camera_utils.h  jvm.cpp  jvm.h  native_debug.h
app/rtc_native/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/rtc_native/src/main/cpp/: CMakeLists.txt
app/rtc_native/src/main/cpp/base/: ImageUtil.cpp  esUtil.h
app/rtc_native/src/main/cpp/camera/: camera.cpp  camera.h  camera_engine.cpp  camera_engine.h  camera_manager.cpp  camera_manager.h  image_reader.cpp  image_reader.h
app/rtc_native/src/main/cpp/main/: android_main.cpp  camera_listeners.cpp  camera_ui.cpp  jni_onload.cpp  rtc_engine_jni.cpp  window_monitor.cpp  window_monitor.h
app/rtc_native/src/main/cpp/peer/: android_video_frame_buffer.cpp  android_video_frame_buffer.h  android_video_sink.cpp  android_video_track_source.cpp  android_video_track_source.h  my_rtc_engine.cpp  my_rtc_engine.h
app/rtc_native/src/main/cpp/signaling/: signaling_client.cpp  signaling_client.h  socket_callback_interface.h
app/rtc_native/src/main/cpp/testthread/: test_thread.cpp
app/rtc_native/src/main/cpp/utils/: attach_thread_scoped.cpp  attach_thread_scoped.h  camera_utils.h  class_loader.cpp  class_loader.h  java_types.cpp  java_types.h  jni_generator_helper.cpp  jni_generator_helper.h  jni_helpers.cpp  jni_helpers.h  jni_onload.cpp  jvm.cpp  jvm.h  native_debug.h  scoped_java_ref.h
app/test_glide/: build.gradle  build.gradle.kts
app/test_rust_jni/: build.gradle  build.gradle.kts
dagger2/: build.gradle
ffmpeg/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: java_lib_basic.gradle  webrtc
lib/33_lib_processor/: build.gradle
lib/TestIO/: build.gradle  build.gradle.kts
lib/TestRxJava/: build.gradle  build.gradle.kts
lib/algorithm/: build.gradle  build.gradle.kts
lib/jni_native/: build.gradle.kts
lib/lib_butter_knife/: build.gradle  build.gradle.kts
lib/lib_ffmpeg/: build.gradle
lib/lib_jni/: build.gradle
lib/lib_processor/: build.gradle.kts
lib/test_OKHttp/: build.gradle  build.gradle.kts
lib/test_java/: build.gradle.kts
lib/test_jni/: build.gradle.kts
lib/test_reflection/: build.gradle
lib/test_rust/src/main/test_rust/: Cargo.toml
lib/test_rust/src/main/test_rust/src/: lib.rs
lib_butter_knife/: build.gradle
media/: build.gradle
media_player/: build.gradle
my_butter_knife/: build.gradle
provider/: build.gradle
test_glide/: build.gradle
test_retrofit/: build.gradle
test_rust/: build.gradle
(+531 files in other folders)
