[package]
name = "test_rust"
version = "0.1.0"
authors = ["Albert <guobool@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.17.0", default-features = false }

[profile.release]
lto = true

[lib]
name = "test_rust"
crate-type = ["cdylib"]